Docker compose local build

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -331,7 +331,9 @@ services:
 
   # Frontend web application.
   web:
-    image: langgenius/dify-web:0.13.0
+    build:
+      context: ../web
+      dockerfile: Dockerfile
     restart: always
     environment:
       CONSOLE_API_URL: ${CONSOLE_API_URL:-}
@@ -340,6 +342,8 @@ services:
       NEXT_TELEMETRY_DISABLED: ${NEXT_TELEMETRY_DISABLED:-0}
       TEXT_GENERATION_TIMEOUT_MS: ${TEXT_GENERATION_TIMEOUT_MS:-60000}
       CSP_WHITELIST: ${CSP_WHITELIST:-}
+    networks:
+      - default
 
   # The postgres database.
   db:
