--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -439,15 +439,28 @@ services:
     volumes:
       - ./volumes/certbot/www:/var/www/certbot
       - ./volumes/certbot/conf:/etc/letsencrypt
-      - ./volumes/certbot/www:/var/www/html
       - ./volumes/certbot/logs:/var/log/letsencrypt
       - ./certbot/docker-entrypoint.sh:/docker-entrypoint.sh
     environment:
-      - CERTBOT_EMAIL=jack@mind-verse.de
-      - CERTBOT_DOMAIN=studio3.mind-verse.de
-      - CERTBOT_OPTIONS=
+      CERTBOT_EMAIL: jack@mind-verse.de
+      CERTBOT_DOMAIN: studio3.mind-verse.de
+      CERTBOT_OPTIONS:
     entrypoint: ["/docker-entrypoint.sh"]
-    command: ["tail", "-f", "/dev/null"]
+    command:
+      [
+        "certonly",
+        "--webroot",
+        "-w",
+        "/var/www/certbot",
+        "-d",
+        "studio3.mind-verse.de",
+        "-d",
+        "www.studio3.mind-verse.de",
+        "--email",
+        "jack@mind-verse.de",
+        "--agree-tos",
+        "--no-eff-email",
+      ]
 
   # The nginx reverse proxy.
   # used for reverse proxying the API service and Web service.
@@ -461,10 +474,8 @@ services:
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/docker-entrypoint.sh:/docker-entrypoint-mount.sh
       - ./nginx/ssl:/etc/ssl # cert dir (legacy)
-      - ./volumes/certbot/conf/live:/etc/letsencrypt/live # cert dir (with certbot container)
       - ./volumes/certbot/conf:/etc/letsencrypt
       - ./volumes/certbot/www:/var/www/certbot
-      - ./volumes/certbot/www:/var/www/html
     entrypoint:
       [
         "sh",
@@ -476,8 +487,6 @@ services:
       NGINX_HTTPS_ENABLED: ${NGINX_HTTPS_ENABLED:-false}
       NGINX_SSL_PORT: ${NGINX_SSL_PORT:-443}
       NGINX_PORT: ${NGINX_PORT:-80}
-      # You're required to add your own SSL certificates/keys to the `./nginx/ssl` directory
-      # and modify the env vars below in .env if HTTPS_ENABLED is true.
       NGINX_SSL_CERT_FILENAME: ${NGINX_SSL_CERT_FILENAME:-dify.crt}
       NGINX_SSL_CERT_KEY_FILENAME: ${NGINX_SSL_CERT_KEY_FILENAME:-dify.key}
       NGINX_SSL_PROTOCOLS: ${NGINX_SSL_PROTOCOLS:-TLSv1.1 TLSv1.2 TLSv1.3}
@@ -485,9 +494,8 @@ services:
       NGINX_CLIENT_MAX_BODY_SIZE: ${NGINX_CLIENT_MAX_BODY_SIZE:-15M}
       NGINX_KEEPALIVE_TIMEOUT: ${NGINX_KEEPALIVE_TIMEOUT:-65}
       NGINX_PROXY_READ_TIMEOUT: ${NGINX_PROXY_READ_TIMEOUT:-3600s}
-      NGINX_PROXY_SEND_TIMEOUT: ${NGINX_PROXY_SEND_TIMEOUT:-3600s}
-      NGINX_ENABLE_CERTBOT_CHALLENGE: ${NGINX_ENABLE_CERTBOT_CHALLENGE:-false}
-      CERTBOT_DOMAIN: ${CERTBOT_DOMAIN:-}
+      NGINX_ENABLE_CERTBOT_CHALLENGE: ${NGINX_ENABLE_CERTBOT_CHALLENGE:-true}
+      CERTBOT_DOMAIN: ${CERTBOT_DOMAIN:-studio3.mind-verse.de}
     depends_on:
       - api
       - web
