--- a/docker/nginx/https.conf.template
+++ b/docker/nginx/https.conf.template
@@ -1,9 +1,10 @@
 # Please do not directly edit this file. Instead, modify the .env variables related to NGINX configuration.
 
 listen ${NGINX_SSL_PORT} ssl;
-ssl_certificate ${SSL_CERTIFICATE_PATH};
-ssl_certificate_key ${SSL_CERTIFICATE_KEY_PATH};
-ssl_protocols ${NGINX_SSL_PROTOCOLS};
+ssl_certificate /etc/nginx/ssl/nginx.crt;
+ssl_certificate_key /etc/nginx/ssl/nginx.key;
+ssl_protocols TLSv1.2 TLSv1.3;
+ssl_ciphers HIGH:!aNULL:!MD5;
 ssl_prefer_server_ciphers on;
 ssl_session_cache shared:SSL:10m;
 ssl_session_timeout 10m;
