--- a/docker/.env.example
+++ b/docker/.env.example
@@ -869,17 +869,16 @@ NGINX_PROXY_READ_TIMEOUT=3600s
 NGINX_PROXY_SEND_TIMEOUT=3600s
 
 # Set true to accept requests for /.well-known/acme-challenge/
-NGINX_ENABLE_CERTBOT_CHALLENGE=false
+NGINX_ENABLE_CERTBOT_CHALLENGE=true
 
 # ------------------------------
 # Certbot Configuration
 # ------------------------------
 
 # Email address (required to get certificates from Let's Encrypt)
-CERTBOT_EMAIL=your_email@example.com
-
+CERTBOT_EMAIL=jack@mind-verse.de
 # Domain name
-CERTBOT_DOMAIN=your_domain.com
+CERTBOT_DOMAIN=studio3.mind-verse.de
 
 # certbot command options
 # i.e: --force-renewal --dry-run --test-cert --debug
