--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -472,7 +472,7 @@ services:
       - ./nginx/proxy.conf.template:/etc/nginx/proxy.conf.template
       - ./nginx/https.conf.template:/etc/nginx/https.conf.template
       - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./nginx/docker-entrypoint.sh:/tmp/docker-entrypoint.sh
+      - ./nginx/docker-entrypoint.sh:/docker-entrypoint.sh
       - ./nginx/ssl:/etc/nginx/ssl
       - ./volumes/certbot/conf:/etc/letsencrypt
       - ./volumes/certbot/www:/var/www/certbot
