ssl certificate path

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -855,6 +855,9 @@ NGINX_PORT=443
 NGINX_SSL_PORT=443
 # if HTTPS_ENABLED is true, you're required to add your own SSL certificates/keys to the `./nginx/ssl` directory
 # and modify the env vars below accordingly.
+SSL_CERTIFICATE_PATH=/etc/letsencrypt/live/
+SSL_CERTIFICATE_KEY_PATH=/etc/letsencrypt/live/
+
 NGINX_SSL_CERT_FILENAME=dify.crt
 NGINX_SSL_CERT_KEY_FILENAME=dify.key
 NGINX_SSL_PROTOCOLS=TLSv1.1 TLSv1.2 TLSv1.3
