--- a/docker/.env.example
+++ b/docker/.env.example
@@ -847,7 +847,7 @@ OPENSEARCH_NOFILE_HARD=65536
 # ------------------------------
 # Environment Variables for Nginx reverse proxy
 # ------------------------------
-NGINX_SERVER_NAME=_
+NGINX_SERVER_NAME=studio3.mind-verse.de
 NGINX_HTTPS_ENABLED=true
 # HTTP port
 NGINX_PORT=443
@@ -856,7 +856,7 @@ NGINX_SSL_PORT=443
 # if HTTPS_ENABLED is true, you're required to add your own SSL certificates/keys to the `./nginx/ssl` directory
 # and modify the env vars below accordingly.
 SSL_CERTIFICATE_PATH=/etc/letsencrypt/live/
-SSL_CERTIFICATE_KEY_PATH=/etc/letsencrypt/live/
+SSL_CERTIFICATE_KEY_PATH=/etc/letsencrypt/live/studio3.mind-verse.de
 
 NGINX_SSL_CERT_FILENAME=dify.crt
 NGINX_SSL_CERT_KEY_FILENAME=dify.key
