--- a/docker/.env.example
+++ b/docker/.env.example
@@ -847,17 +847,14 @@ OPENSEARCH_NOFILE_HARD=65536
 # ------------------------------
 # Environment Variables for Nginx reverse proxy
 # ------------------------------
-NGINX_SERVER_NAME=_
-NGINX_HTTPS_ENABLED=false
+NGINX_SERVER_NAME=bestway-studio.mind-verse.de
+NGINX_HTTPS_ENABLED=true
 # HTTP port
 NGINX_PORT=80
 # SSL settings are only applied when HTTPS_ENABLED is true
 NGINX_SSL_PORT=443
-# if HTTPS_ENABLED is true, you're required to add your own SSL certificates/keys to the `./nginx/ssl` directory
-# and modify the env vars below accordingly.
-NGINX_SSL_CERT_FILENAME=dify.crt
-NGINX_SSL_CERT_KEY_FILENAME=dify.key
-NGINX_SSL_PROTOCOLS=TLSv1.1 TLSv1.2 TLSv1.3
+NGINX_SSL_PROTOCOLS=TLSv1.2 TLSv1.3
+NGINX_ENABLE_CERTBOT_CHALLENGE=true
 
 # Nginx performance tuning
 NGINX_WORKER_PROCESSES=auto
@@ -868,21 +865,17 @@ NGINX_KEEPALIVE_TIMEOUT=65
 NGINX_PROXY_READ_TIMEOUT=3600s
 NGINX_PROXY_SEND_TIMEOUT=3600s
 
-# Set true to accept requests for /.well-known/acme-challenge/
-NGINX_ENABLE_CERTBOT_CHALLENGE=false
-
 # ------------------------------
 # Certbot Configuration
 # ------------------------------
 
 # Email address (required to get certificates from Let's Encrypt)
-CERTBOT_EMAIL=your_email@example.com
+CERTBOT_EMAIL=jack@mind-verse.de
 
 # Domain name
-CERTBOT_DOMAIN=your_domain.com
+CERTBOT_DOMAIN=bestway-studio.mind-verse.de
 
 # certbot command options
-# i.e: --force-renewal --dry-run --test-cert --debug
 CERTBOT_OPTIONS=
 
 # ------------------------------
