--- a/docker/nginx/conf.d/default.conf.template
+++ b/docker/nginx/conf.d/default.conf.template
@@ -4,6 +4,11 @@ server {
     listen ${NGINX_PORT};
     server_name ${NGINX_SERVER_NAME};
 
+    # Certbot ACME Challenge Location
+    location /.well-known/acme-challenge/ {
+        root /var/www/html;
+    }
+
     location /console/api {
       proxy_pass http://api:5001;
       include proxy.conf;
