--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -344,6 +344,10 @@ services:
       CSP_WHITELIST: ${CSP_WHITELIST:-}
     networks:
       - default
+    ports:
+      - "80:3000"
+    volumes:
+      - ./letsencrypt:/app/web/.well-known/acme-challenge
 
   # The postgres database.
   db:
