--- a/docker/.env.example
+++ b/docker/.env.example
@@ -848,13 +848,16 @@ OPENSEARCH_NOFILE_HARD=65536
 # Environment Variables for Nginx reverse proxy
 # ------------------------------
 NGINX_SERVER_NAME=bestway-studio.mind-verse.de
-NGINX_HTTPS_ENABLED=true
+NGINX_HTTPS_ENABLED=false
 # HTTP port
 NGINX_PORT=80
 # SSL settings are only applied when HTTPS_ENABLED is true
 NGINX_SSL_PORT=443
 NGINX_SSL_PROTOCOLS=TLSv1.2 TLSv1.3
 NGINX_ENABLE_CERTBOT_CHALLENGE=true
+
+# ACME Challenge Location for SSL certification
+ACME_CHALLENGE_LOCATION="location /.well-known/acme-challenge/ { root /var/www/html; try_files \$uri =404; }"
 
 # Nginx performance tuning
 NGINX_WORKER_PROCESSES=auto
