--- a/docker/.env.example
+++ b/docker/.env.example
@@ -850,7 +850,8 @@ OPENSEARCH_NOFILE_HARD=65536
 NGINX_SERVER_NAME=bestway-studio.mind-verse.de
 NGINX_HTTPS_ENABLED=false
 # HTTP port
-NGINX_PORT=80
+NGINX_PORT=8080
+EXPOSE_NGINX_PORT=8080
 # SSL settings are only applied when HTTPS_ENABLED is true
 NGINX_SSL_PORT=443
 NGINX_SSL_PROTOCOLS=TLSv1.2 TLSv1.3
