--- a/docker/.env.example
+++ b/docker/.env.example
@@ -854,7 +854,11 @@ NGINX_PORT=8080
 EXPOSE_NGINX_PORT=8080
 # SSL settings are only applied when HTTPS_ENABLED is true
 NGINX_SSL_PORT=443
-NGINX_SSL_PROTOCOLS=TLSv1.2 TLSv1.3
+# if HTTPS_ENABLED is true, you're required to add your own SSL certificates/keys to the `./nginx/ssl` directory
+# and modify the env vars below accordingly.
+NGINX_SSL_CERT_FILENAME=dify.crt
+NGINX_SSL_CERT_KEY_FILENAME=dify.key
+NGINX_SSL_PROTOCOLS=TLSv1.1 TLSv1.2 TLSv1.3
 NGINX_ENABLE_CERTBOT_CHALLENGE=true
 
 # ACME Challenge Location for SSL certification
