--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -453,6 +453,8 @@ services:
       - CERTBOT_OPTIONS=${CERTBOT_OPTIONS:-}
     entrypoint: ['/docker-entrypoint.sh']
     command: ['tail', '-f', '/dev/null']
+    depends_on:
+      - nginx
     networks:
       - default
 
