--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -436,7 +436,6 @@ services:
       - default
 
   # Certbot service
-  # use `docker-compose --profile certbot up` to start the certbot service.
   certbot:
     image: certbot/certbot
     container_name: docker-certbot-1
@@ -451,7 +450,8 @@ services:
       - CERTBOT_EMAIL=${CERTBOT_EMAIL}
       - CERTBOT_DOMAIN=${CERTBOT_DOMAIN}
       - CERTBOT_OPTIONS=${CERTBOT_OPTIONS:-}
-    entrypoint: ['/docker-entrypoint.sh']
+    #entrypoint: ['/docker-entrypoint.sh']
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
     command: ['tail', '-f', '/dev/null']
     depends_on:
       - nginx
