--- a/docker/.env.example
+++ b/docker/.env.example
@@ -856,8 +856,8 @@ EXPOSE_NGINX_PORT=8080
 NGINX_SSL_PORT=443
 # if HTTPS_ENABLED is true, you're required to add your own SSL certificates/keys to the `./nginx/ssl` directory
 # and modify the env vars below accordingly.
-NGINX_SSL_CERT_FILENAME=dify.crt
-NGINX_SSL_CERT_KEY_FILENAME=dify.key
+NGINX_SSL_CERT_FILENAME=fullchain.pem
+NGINX_SSL_CERT_KEY_FILENAME=privkey.pem
 NGINX_SSL_PROTOCOLS=TLSv1.1 TLSv1.2 TLSv1.3
 NGINX_ENABLE_CERTBOT_CHALLENGE=true
 
