--- a/docker-legacy/nginx/conf.d/default.conf
+++ b/docker-legacy/nginx/conf.d/default.conf
@@ -29,8 +29,8 @@ server {
 
     # If you want to support HTTPS, please uncomment the code snippet below
     listen 443 ssl;
-    ssl_certificate ./../ssl/dify.crt;
-    ssl_certificate_key ./../ssl/dify.key;
+    ssl_certificate /etc/letsencrypt/live/bestway-studio.mind-verse.de-0001/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/bestway-studio.mind-verse.de-0001/privkey.pem;
     ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_session_cache shared:SSL:10m;
