--- a/docker/.env.example
+++ b/docker/.env.example
@@ -881,7 +881,7 @@ NGINX_PROXY_SEND_TIMEOUT=3600s
 CERTBOT_EMAIL=jack@mind-verse.de
 
 # Domain name
-CERTBOT_DOMAIN=bestway-studio.mind-verse.de
+CERTBOT_DOMAIN=bestway-studio.mind-verse.de-0001
 
 # certbot command options
 CERTBOT_OPTIONS=
