--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -473,6 +473,7 @@ services:
     entrypoint: ["/docker-entrypoint.sh"]
     command: ["nginx", "-g", "daemon off;"]
     environment:
+      ACME_CHALLENGE_LOCATION: ${ACME_CHALLENGE_LOCATION}
       NGINX_SERVER_NAME: ${NGINX_SERVER_NAME:-_}
       NGINX_HTTPS_ENABLED: ${NGINX_HTTPS_ENABLED:-false}
       NGINX_SSL_PORT: ${NGINX_SSL_PORT:-443}
