--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -462,24 +462,23 @@ services:
     image: nginx:latest
     restart: always
     volumes:
-      - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template
-      - ./nginx/proxy.conf.template:/etc/nginx/proxy.conf.template
-      - ./nginx/https.conf.template:/etc/nginx/https.conf.template
-      - ./nginx/conf.d/default.conf.template:/etc/nginx/conf.d/default.conf.template
-      - ./nginx/docker-entrypoint.sh:/docker-entrypoint.sh
-      - ./nginx/ssl:/etc/nginx/ssl
-      - ./volumes/certbot/conf:/etc/letsencrypt
-      - ./volumes/certbot/www:/var/www/certbot
+    - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template
+    - ./nginx/proxy.conf.template:/etc/nginx/proxy.conf.template
+    - ./nginx/https.conf.template:/etc/nginx/https.conf.template
+    - ./nginx/conf.d/default.conf.template:/etc/nginx/conf.d/default.conf.template
+    - ./nginx/docker-entrypoint.sh:/docker-entrypoint.sh
+    - ./nginx/ssl:/etc/nginx/ssl
+    - ./volumes/certbot/conf:/etc/letsencrypt
+      - ./volumes/certbot/www:/var/www/html
     entrypoint: ["/docker-entrypoint.sh"]
     command: ["nginx", "-g", "daemon off;"]
     environment:
-      ACME_CHALLENGE_LOCATION: ${ACME_CHALLENGE_LOCATION}
       NGINX_SERVER_NAME: ${NGINX_SERVER_NAME:-_}
-      NGINX_HTTPS_ENABLED: ${NGINX_HTTPS_ENABLED:-false}
+      NGINX_HTTPS_ENABLED: ${NGINX_HTTPS_ENABLED:-true}
       NGINX_SSL_PORT: ${NGINX_SSL_PORT:-443}
       NGINX_PORT: ${NGINX_PORT:-80}
-      NGINX_SSL_CERT_FILENAME: ${NGINX_SSL_CERT_FILENAME:-dify.crt}
-      NGINX_SSL_CERT_KEY_FILENAME: ${NGINX_SSL_CERT_KEY_FILENAME:-dify.key}
+      NGINX_SSL_CERT_FILENAME: ${NGINX_SSL_CERT_FILENAME:-fullchain.pem}
+      NGINX_SSL_CERT_KEY_FILENAME: ${NGINX_SSL_CERT_KEY_FILENAME:-privkey.pem}
       NGINX_SSL_PROTOCOLS: ${NGINX_SSL_PROTOCOLS:-TLSv1.1 TLSv1.2 TLSv1.3}
       NGINX_WORKER_PROCESSES: ${NGINX_WORKER_PROCESSES:-auto}
       NGINX_CLIENT_MAX_BODY_SIZE: ${NGINX_CLIENT_MAX_BODY_SIZE:-15M}
@@ -487,7 +486,8 @@ services:
       NGINX_PROXY_READ_TIMEOUT: ${NGINX_PROXY_READ_TIMEOUT:-3600s}
       NGINX_PROXY_SEND_TIMEOUT: ${NGINX_PROXY_SEND_TIMEOUT:-3600s}
       NGINX_ENABLE_CERTBOT_CHALLENGE: ${NGINX_ENABLE_CERTBOT_CHALLENGE:-true}
-      CERTBOT_DOMAIN: ${CERTBOT_DOMAIN:-studio3.mind-verse.de}
+      CERTBOT_DOMAIN: ${CERTBOT_DOMAIN:-binect-studio.mind-verse.de}
+      ACME_CHALLENGE_LOCATION: ${ACME_CHALLENGE_LOCATION:-location /.well-known/acme-challenge/ { root /var/www/html; try_files $uri =404; }}
     depends_on:
       - api
       - web
