--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -440,6 +440,7 @@ services:
     image: certbot/certbot
     container_name: docker-certbot-1
     volumes:
+      - ./volumes/certbot/www:/var/www/html
       - ./certbot/update-cert.template.txt:/update-cert.template.txt
       - ./volumes/certbot/www:/var/www/certbot
       - ./volumes/certbot/conf:/etc/letsencrypt
@@ -449,10 +450,11 @@ services:
       - CERTBOT_EMAIL=${CERTBOT_EMAIL}
       - CERTBOT_DOMAIN=${CERTBOT_DOMAIN}
       - CERTBOT_OPTIONS=${CERTBOT_OPTIONS:-}
+      - TZ=${TZ:-UTC}
     entrypoint: ['/docker-entrypoint.sh']
-    command: ['tail', '-f', '/dev/null']
     depends_on:
       - nginx
+    restart: unless-stopped
 
   # The nginx reverse proxy.
   # used for reverse proxying the API service and Web service.
@@ -460,27 +462,25 @@ services:
     image: nginx:latest
     restart: always
     volumes:
-      - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template
-      - ./nginx/proxy.conf.template:/etc/nginx/proxy.conf.template
-      - ./nginx/https.conf.template:/etc/nginx/https.conf.template
-      - ./nginx/conf.d:/etc/nginx/conf.d
-      - ./nginx/docker-entrypoint.sh:/tmp/docker-entrypoint.sh
-      - ./nginx/ssl:/etc/nginx/ssl
-      - ./volumes/certbot/conf:/etc/letsencrypt
-      - ./volumes/certbot/www:/var/www/certbot
-    entrypoint:
-      [
-        "sh",
-        "-c",
-        "cp /tmp/docker-entrypoint.sh /docker-entrypoint.sh && chmod +x /docker-entrypoint.sh && /docker-entrypoint.sh"
-      ]
+      - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template:ro
+      - ./nginx/proxy.conf.template:/etc/nginx/proxy.conf.template:ro
+      - ./nginx/https.conf.template:/etc/nginx/https.conf.template:ro
+      - ./nginx/conf.d/default.conf.template:/etc/nginx/conf.d/default.conf.template:ro
+      - ./nginx/docker-entrypoint.sh:/docker-entrypoint.sh:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro
+      - ./volumes/certbot/conf:/etc/letsencrypt:ro
+      - ./volumes/certbot/www:/var/www/html:rw
+      - ./volumes/certbot/www:/var/www/certbot:rw
+      - ./volumes/certbot/logs:/var/log/letsencrypt:rw
+    entrypoint: ["/docker-entrypoint.sh"]
+    command: ["nginx", "-g", "daemon off;"]
     environment:
       NGINX_SERVER_NAME: ${NGINX_SERVER_NAME:-_}
-      NGINX_HTTPS_ENABLED: ${NGINX_HTTPS_ENABLED:-false}
+      NGINX_HTTPS_ENABLED: ${NGINX_HTTPS_ENABLED:-true}
       NGINX_SSL_PORT: ${NGINX_SSL_PORT:-443}
       NGINX_PORT: ${NGINX_PORT:-80}
-      NGINX_SSL_CERT_FILENAME: ${NGINX_SSL_CERT_FILENAME:-dify.crt}
-      NGINX_SSL_CERT_KEY_FILENAME: ${NGINX_SSL_CERT_KEY_FILENAME:-dify.key}
+      NGINX_SSL_CERT_FILENAME: ${NGINX_SSL_CERT_FILENAME:-fullchain.pem}
+      NGINX_SSL_CERT_KEY_FILENAME: ${NGINX_SSL_CERT_KEY_FILENAME:-privkey.pem}
       NGINX_SSL_PROTOCOLS: ${NGINX_SSL_PROTOCOLS:-TLSv1.1 TLSv1.2 TLSv1.3}
       NGINX_WORKER_PROCESSES: ${NGINX_WORKER_PROCESSES:-auto}
       NGINX_CLIENT_MAX_BODY_SIZE: ${NGINX_CLIENT_MAX_BODY_SIZE:-15M}
@@ -488,7 +488,8 @@ services:
       NGINX_PROXY_READ_TIMEOUT: ${NGINX_PROXY_READ_TIMEOUT:-3600s}
       NGINX_PROXY_SEND_TIMEOUT: ${NGINX_PROXY_SEND_TIMEOUT:-3600s}
       NGINX_ENABLE_CERTBOT_CHALLENGE: ${NGINX_ENABLE_CERTBOT_CHALLENGE:-true}
-      CERTBOT_DOMAIN: ${CERTBOT_DOMAIN:-studio3.mind-verse.de}
+      CERTBOT_DOMAIN: ${CERTBOT_DOMAIN:-TODO-studio.mind-verse.de}
+      ACME_CHALLENGE_LOCATION: ${ACME_CHALLENGE_LOCATION:-"location /.well-known/acme-challenge/ { root /var/www/html; try_files $uri =404; }"}
     depends_on:
       - api
       - web
@@ -850,7 +851,6 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx.conf.template:/etc/nginx/nginx.conf.template
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./volumes/certbot/www:/var/www/html
     environment:
