--- a/web/package.json
+++ b/web/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.22.3",
-    "@dagrejs/dagre": "^1.1.2",
+    "@dagrejs/dagre": "^1.1.4",
     "@emoji-mart/data": "^1.1.2",
     "@floating-ui/react": "^0.25.2",
     "@formatjs/intl-localematcher": "^0.5.4",
@@ -125,6 +125,10 @@
     "@testing-library/dom": "^10.3.2",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel__generator": "^7.6.8",
+    "@types/babel__template": "^7.4.4",
+    "@types/babel__traverse": "^7.20.5",
     "@types/crypto-js": "^4.1.1",
     "@types/dagre": "^0.7.52",
     "@types/jest": "^29.5.12",
@@ -140,6 +144,7 @@
     "@types/react-window": "^1.8.5",
     "@types/react-window-infinite-loader": "^1.0.6",
     "@types/recordrtc": "^5.6.11",
+    "@types/semver": "^7.5.8",
     "@types/sortablejs": "^1.15.1",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.14",
