--- a/docker/.env.example
+++ b/docker/.env.example
@@ -850,8 +850,8 @@ OPENSEARCH_NOFILE_HARD=65536
 NGINX_SERVER_NAME=paritaetischer-studio.mind-verse.de
 NGINX_HTTPS_ENABLED=true
 # HTTP port
-NGINX_PORT=8080
-EXPOSE_NGINX_PORT=8080
+NGINX_PORT=80
+EXPOSE_NGINX_PORT=80
 # SSL settings are only applied when HTTPS_ENABLED is true
 NGINX_SSL_PORT=443
 # if HTTPS_ENABLED is true, you're required to add your own SSL certificates/keys to the `./nginx/ssl` directory
@@ -936,3 +936,15 @@ CSP_WHITELIST=
 
 # Enable or disable create tidb service job
 CREATE_TIDB_SERVICE_JOB_ENABLED=false
+
+# ------------------------------
+# Nginx Configuration
+# ------------------------------
+NGINX_PORT=80
+NGINX_HTTPS_PORT=8443
+NGINX_SERVER_NAME=localhost
+NGINX_SSL_CERTIFICATE=/etc/nginx/ssl/live/localhost/fullchain.pem
+NGINX_SSL_CERTIFICATE_KEY=/etc/nginx/ssl/live/localhost/privkey.pem
+NGINX_WORKER_PROCESSES=auto
+NGINX_KEEPALIVE_TIMEOUT=65
+NGINX_CLIENT_MAX_BODY_SIZE=75M
