--- a/docker/.env.example
+++ b/docker/.env.example
@@ -847,7 +847,7 @@ OPENSEARCH_NOFILE_HARD=65536
 # ------------------------------
 # Environment Variables for Nginx reverse proxy
 # ------------------------------
-NGINX_SERVER_NAME=ai-swift-page.de
+NGINX_SERVER_NAME=ai.swift-page.de
 NGINX_HTTPS_ENABLED=true
 # HTTP port
 NGINX_PORT=8080
