Update Dify to version 1.0.0

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -936,3 +936,55 @@ CSP_WHITELIST=
 
 # Enable or disable create tidb service job
 CREATE_TIDB_SERVICE_JOB_ENABLED=false
+
+# ------------------------------
+# Plugin System Configuration (Dify 1.0)
+# ------------------------------
+
+# Plugin marketplace URL
+PLUGIN_MARKETPLACE_URL=https://marketplace.dify.ai
+
+# Plugin storage path
+PLUGIN_STORAGE_PATH=plugins
+
+# Plugin workers for extraction
+PLUGIN_WORKERS=20
+
+# ------------------------------
+# Workflow Configuration
+# ------------------------------
+
+# Maximum execution steps for workflows
+WORKFLOW_MAX_EXECUTION_STEPS=500
+
+# Maximum execution time for workflows (in seconds)
+WORKFLOW_MAX_EXECUTION_TIME=1200
+
+# Maximum call depth for workflows
+WORKFLOW_CALL_MAX_DEPTH=5
+
+# Maximum variable size (in bytes)
+MAX_VARIABLE_SIZE=204800
+
+# Maximum file upload limit for workflows (in MB)
+WORKFLOW_FILE_UPLOAD_LIMIT=10
+
+# ------------------------------
+# HTTP Request Node Configuration
+# ------------------------------
+
+# Maximum binary size for HTTP request node (in bytes)
+HTTP_REQUEST_NODE_MAX_BINARY_SIZE=10485760
+
+# Maximum text size for HTTP request node (in bytes)
+HTTP_REQUEST_NODE_MAX_TEXT_SIZE=1048576
+
+# ------------------------------
+# SSRF Proxy Configuration
+# ------------------------------
+
+# SSRF Proxy HTTP URL
+SSRF_PROXY_HTTP_URL=http://ssrf_proxy:3128
+
+# SSRF Proxy HTTPS URL
+SSRF_PROXY_HTTPS_URL=http://ssrf_proxy:3128
