--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -292,7 +292,7 @@ x-shared-env: &shared-api-worker-env
 services:
   # API service
   api:
-    image: langgenius/dify-api:0.13.0
+    image: langgenius/dify-api:1.0.0
     restart: always
     environment:
       # Use the shared environment variables.
@@ -312,7 +312,7 @@ services:
   # worker service
   # The Celery worker for processing the queue.
   worker:
-    image: langgenius/dify-api:0.13.0
+    image: langgenius/dify-api:1.0.0
     restart: always
     environment:
       # Use the shared environment variables.
@@ -331,11 +331,8 @@ services:
 
   # Frontend web application.
   web:
-    build:
-      context: ../web
-      dockerfile: Dockerfile
+    image: langgenius/dify-web:1.0.0
     restart: always
-    user: root
     environment:
       CONSOLE_API_URL: ${CONSOLE_API_URL:-}
       APP_API_URL: ${APP_API_URL:-}
@@ -388,7 +385,7 @@ services:
 
   # The DifySandbox
   sandbox:
-    image: langgenius/dify-sandbox:0.2.10
+    image: langgenius/dify-sandbox:0.3.0
     restart: always
     environment:
       # The DifySandbox configurations
