--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -478,6 +478,11 @@ services:
       TOP_K_MAX_VALUE: ${TOP_K_MAX_VALUE:-}
       INDEXING_MAX_SEGMENTATION_TOKENS_LENGTH: ${INDEXING_MAX_SEGMENTATION_TOKENS_LENGTH:-}
       PM2_INSTANCES: ${PM2_INSTANCES:-2}
+    volumes:
+      - ./letsencrypt:/app/web/.well-known/acme-challenge
+      - ./volumes/certbot/www:/var/www/html
+      - ../web/public/favicon.ico:/app/web/public/favicon.ico
+      - ../web/public/logo/mind-verse.png:/app/web/public/logo/mind-verse.png
 
   # The postgres database.
   db:
