--- a/docker/nginx/conf.d/default.conf.template
+++ b/docker/nginx/conf.d/default.conf.template
@@ -11,8 +11,11 @@ server {
     # placeholder for acme challenge location
     ${ACME_CHALLENGE_LOCATION}
 
-    # Static files location
-    ${STATIC_FILES_LOCATION}
+    # Static files
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+        root /app/web/public;
+        expires 30d;
+    }
 
     location /console/api {
       proxy_pass http://api:5001;
