--- a/docker/nginx/conf.d/default.conf.template
+++ b/docker/nginx/conf.d/default.conf.template
@@ -11,11 +11,8 @@ server {
     # placeholder for acme challenge location
     ${ACME_CHALLENGE_LOCATION}
 
-    # Static files
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
-        root /app/web/public;
-        expires 30d;
-    }
+    # Static files location
+    ${STATIC_FILES_LOCATION}
 
     location /console/api {
       proxy_pass http://api:5001;
