--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -408,7 +408,7 @@ x-shared-env: &shared-api-worker-env
   PLUGIN_DIFY_INNER_API_URL: ${PLUGIN_DIFY_INNER_API_URL:-http://api:5001}
   ENDPOINT_URL_TEMPLATE: ${ENDPOINT_URL_TEMPLATE:-http://localhost/e/{hook_id}}
   MARKETPLACE_ENABLED: ${MARKETPLACE_ENABLED:-true}
-  MARKETPLACE_API_URL: ${MARKETPLACE_API_URL:-https://marketplace.dify.ai}
+  MARKETPLACE_API_URL: ${MARKETPLACE_API_URL:-https://marketplace.mindverse.ai}
   FORCE_VERIFYING_SIGNATURE: ${FORCE_VERIFYING_SIGNATURE:-true}
 
 services:
@@ -426,6 +426,8 @@ services:
       SENTRY_PROFILES_SAMPLE_RATE: ${API_SENTRY_PROFILES_SAMPLE_RATE:-1.0}
       PLUGIN_MAX_PACKAGE_SIZE: ${PLUGIN_MAX_PACKAGE_SIZE:-52428800}
       INNER_API_KEY_FOR_PLUGIN: ${PLUGIN_DIFY_INNER_API_KEY:-QaHbTe77CtuXmsfyhR7+vRjI/+XbV1AaFy691iy+kGDv2Jvy0/eAh8Y1}
+    ports:
+      - "5001:5001"
     depends_on:
       - db
       - redis
@@ -463,7 +465,9 @@ services:
 
   # Frontend web application.
   web:
-    image: langgenius/dify-web:1.0.0
+    build:
+      context: ./custom-web
+      dockerfile: Dockerfile
     restart: always
     user: root
     environment:
@@ -473,16 +477,22 @@ services:
       NEXT_TELEMETRY_DISABLED: ${NEXT_TELEMETRY_DISABLED:-0}
       TEXT_GENERATION_TIMEOUT_MS: ${TEXT_GENERATION_TIMEOUT_MS:-60000}
       CSP_WHITELIST: ${CSP_WHITELIST:-}
-      MARKETPLACE_API_URL: ${MARKETPLACE_API_URL:-https://marketplace.dify.ai}
-      MARKETPLACE_URL: ${MARKETPLACE_URL:-https://marketplace.dify.ai}
+      MARKETPLACE_API_URL: ${MARKETPLACE_API_URL:-https://marketplace.mindverse.ai}
+      MARKETPLACE_URL: ${MARKETPLACE_URL:-https://marketplace.mindverse.ai}
       TOP_K_MAX_VALUE: ${TOP_K_MAX_VALUE:-}
       INDEXING_MAX_SEGMENTATION_TOKENS_LENGTH: ${INDEXING_MAX_SEGMENTATION_TOKENS_LENGTH:-}
       PM2_INSTANCES: ${PM2_INSTANCES:-2}
+    networks:
+      - default
+    depends_on:
+      - api
+    extra_hosts:
+      - "api:172.19.0.4"
     volumes:
       - ./letsencrypt:/app/web/.well-known/acme-challenge
       - ./volumes/certbot/www:/var/www/html
+      - ../web/public/logo.png:/app/web/public/logo/logo.png
       - ../web/public/favicon.ico:/app/web/public/favicon.ico
-      - ../web/public/logo/mind-verse.png:/app/web/public/logo/mind-verse.png
 
   # The postgres database.
   db:
