--- a/docker/.env.example
+++ b/docker/.env.example
@@ -881,7 +881,7 @@ CERTBOT_EMAIL=jack@mind-verse.de
 CERTBOT_DOMAIN=flexable-studio.mind-verse.de
 
 # certbot command options
-CERTBOT_OPTIONS=
+CERTBOT_OPTIONS=--force-renewal --agree-tos --non-interactive --webroot --webroot-path=/var/www/html
 
 # ------------------------------
 # Environment Variables for SSRF Proxy
