--- a/docker/.env.example
+++ b/docker/.env.example
@@ -859,7 +859,7 @@ NGINX_SSL_PROTOCOLS=TLSv1.1 TLSv1.2 TLSv1.3
 NGINX_ENABLE_CERTBOT_CHALLENGE=true
 
 # ACME Challenge Location for SSL certification
-ACME_CHALLENGE_LOCATION="location /.well-known/acme-challenge/ { root /var/www/html; try_files \$uri =404; }"
+ACME_CHALLENGE_LOCATION=location /.well-known/acme-challenge/ { root /var/www/html; try_files \$uri =404; }
 
 # Nginx performance tuning
 NGINX_WORKER_PROCESSES=auto
