--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -357,19 +357,20 @@ x-shared-env: &shared-api-worker-env
   OPENSEARCH_MEMLOCK_HARD: ${OPENSEARCH_MEMLOCK_HARD:--1}
   OPENSEARCH_NOFILE_SOFT: ${OPENSEARCH_NOFILE_SOFT:-65536}
   OPENSEARCH_NOFILE_HARD: ${OPENSEARCH_NOFILE_HARD:-65536}
-  NGINX_SERVER_NAME: ${NGINX_SERVER_NAME:-_}
-  NGINX_HTTPS_ENABLED: ${NGINX_HTTPS_ENABLED:-false}
+  NGINX_SERVER_NAME: ${NGINX_SERVER_NAME}
+  NGINX_HTTPS_ENABLED: ${NGINX_HTTPS_ENABLED:-true}
   NGINX_PORT: ${NGINX_PORT:-80}
   NGINX_SSL_PORT: ${NGINX_SSL_PORT:-443}
-  NGINX_SSL_CERT_FILENAME: ${NGINX_SSL_CERT_FILENAME:-dify.crt}
-  NGINX_SSL_CERT_KEY_FILENAME: ${NGINX_SSL_CERT_KEY_FILENAME:-dify.key}
+  NGINX_SSL_CERT_FILENAME: ${NGINX_SSL_CERT_FILENAME:-fullchain.pem}
+  NGINX_SSL_CERT_KEY_FILENAME: ${NGINX_SSL_CERT_KEY_FILENAME:-privkey.pem}
   NGINX_SSL_PROTOCOLS: ${NGINX_SSL_PROTOCOLS:-TLSv1.1 TLSv1.2 TLSv1.3}
   NGINX_WORKER_PROCESSES: ${NGINX_WORKER_PROCESSES:-auto}
   NGINX_CLIENT_MAX_BODY_SIZE: ${NGINX_CLIENT_MAX_BODY_SIZE:-15M}
   NGINX_KEEPALIVE_TIMEOUT: ${NGINX_KEEPALIVE_TIMEOUT:-65}
   NGINX_PROXY_READ_TIMEOUT: ${NGINX_PROXY_READ_TIMEOUT:-3600s}
   NGINX_PROXY_SEND_TIMEOUT: ${NGINX_PROXY_SEND_TIMEOUT:-3600s}
-  NGINX_ENABLE_CERTBOT_CHALLENGE: ${NGINX_ENABLE_CERTBOT_CHALLENGE:-false}
+  NGINX_ENABLE_CERTBOT_CHALLENGE: ${NGINX_ENABLE_CERTBOT_CHALLENGE:-true}
+  ACME_CHALLENGE_LOCATION: ${ACME_CHALLENGE_LOCATION:-location /.well-known/acme-challenge/ { root /var/www/html; try_files \$$uri =404; }}
   CERTBOT_EMAIL: ${CERTBOT_EMAIL:-your_email@example.com}
   CERTBOT_DOMAIN: ${CERTBOT_DOMAIN:-your_domain.com}
   CERTBOT_OPTIONS: ${CERTBOT_OPTIONS:-}
@@ -657,7 +658,7 @@ services:
       NGINX_PROXY_READ_TIMEOUT: ${NGINX_PROXY_READ_TIMEOUT:-3600s}
       NGINX_PROXY_SEND_TIMEOUT: ${NGINX_PROXY_SEND_TIMEOUT:-3600s}
       NGINX_ENABLE_CERTBOT_CHALLENGE: ${NGINX_ENABLE_CERTBOT_CHALLENGE:-true}
-      ACME_CHALLENGE_LOCATION: ${ACME_CHALLENGE_LOCATION:-"location /.well-known/acme-challenge/ { root /var/www/html; try_files $uri =404; }"}
+      ACME_CHALLENGE_LOCATION: ${ACME_CHALLENGE_LOCATION:-location /.well-known/acme-challenge/ { root /var/www/html; try_files \$$uri =404; }}
       CERTBOT_DOMAIN: ${CERTBOT_DOMAIN:-flexable-studio.mind-verse.de}
     depends_on:
       - api
